force-app/main/default/objects/Address__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Additional information about the street address.</description>
    <inlineHelpText>Apartment number or lot number.</inlineHelpText>
    <label>Address 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>