force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City name</description>
    <inlineHelpText>Chicago, New York City, Streetsboro, etc.</inlineHelpText>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>