force-app/main/default/objects/Address__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Street__c &amp;  Address_2__c &amp; &quot; &quot; &amp; City__c &amp; &quot;, &quot; &amp; TEXT(State__c) &amp; &quot; &quot; &amp; Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>