force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address.</description>
    <inlineHelpText>1234 Main Street</inlineHelpText>
    <label>Address 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>