force-app/main/default/objects/Address__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Please enter the first 5 digits of your zip code.</description>
    <inlineHelpText>i.e 44241 NOT 44241-1234</inlineHelpText>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>